# ZJU-BS-SYSTEM-PROJECT

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  clean.sh  pyproject.toml  requirements.txt
docs/: CHANGELOG.md  Design.md  Develop.md
src/: app.py  main.py  pyproject.toml  requirements.txt
src/app/: App.py  Configs.py  __init__.py
src/app/database/: DatabaseConnector.py  DatabaseInitializer.py
src/app/models/: Price.py  Product.py  Subscription.py  User.py
src/app/services/: Dangdang.py  Spider.py  Suning.py
src/app/templates/authentication/: login.html
src/app/templates/home/: home.html
src/app/utils/: Platforms.py  WebDriver.py
src/app/views/: authentication.py  home.py
src/backend/: App.py  Configs.py  __init__.py  requirements.txt
src/backend/database/: ConnectConfig.py  DatabaseConnector.py  DatabaseInitializer.py
src/backend/models/: Price.py  Product.py  Subscription.py  User.py
src/backend/services/: Dangdang.py  Spider.py  Suning.py
src/backend/templates/: base.html  index.html
src/backend/templates/authentication/: login.html  register.html
src/backend/templates/home/: details.html  home.html  search.html
src/backend/utils/: AppInitializer.py  Configs.py  ConnectConfig.py  DatabaseConnector.py  DatabaseInitializer.py  EmailManager.py  WebDriver.py
src/backend/views/: authentication.py  home.py  index.py
src/config/: Application.yml  DBInitializer.sql  application.yml  db4mysql.sql
src/configs/: Application.yml  DBInitializer.sql
src/tests/: DatabaseTests.py  EmailTests.py
