[build-system]
requires = [ "setuptools>=75", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "Budget_Bee"
version = "2.1.1"
description = "A cross-platform budget management tool to help users compare prices and make the best decisions."
keywords = ["full-stack", "Flask", "MySQL", "Python", "B/S", "ZJU"]
authors = [
  { name = "!EEExp3rt", email = "1EEExpErt@zju.edu.cn" },
]
maintainers = [
  { name = "!EEExp3rt", email = "1EEExpErt@zju.edu.cn" },
]
readme = "README.md"
dependencies = [
  "Flask",
  "PyMySQL",
  "PyYAML",
  "cryptography",
  "selenium",
  "mmh3"
]

[tool.setuptools]
packages = ['src']
include-package-data = true

[tool.setuptools.package-data]
'src' = ['**']