[project]
name = "Budget_Bee"
version = "1.0.0"
description = "A cross-platform budget management tool to help users compare prices and make the best decisions."
keywords = ["full-stack", "Flask", "MySQL", "Python", "B/S", "ZJU"]
authors = [
  { name = "!EEExp3rt", email = "1EEExpErt@zju.edu.cn" },
]
maintainers = [
  { name = "!EEExp3rt", email = "1EEExpErt@zju.edu.cn" },
]
readme = "README.md"
dependencies = [
  "Flask",
  "PyMySQL",
  "PyYAML",
  "cryptography",
  "selenium",
  "mmh3"
]